# ggml-hrx-kernel-bench

./: README.md  pyproject.toml
catalog/hrx2/: artifacts.json  families.json  metadata.json  observed_shapes.json  sources.json
kernels/: README.md
kernels/hrx2/: add_rms_norm_mul_f32.loom  argsort_f32_i32.loom  cont_f32.loom  cont_set_rows_f32.loom  copy_f32_f16.loom  get_rows_f32.loom  get_rows_moe_weights_f32.loom  get_rows_q4_k_f32.loom  get_rows_q5_k_f32.loom  get_rows_q6_k_f32.loom  get_rows_q8_0_f32.loom  matmul_q4_k_f32_f16acc_aligned_l_f16acc_payload_probe.loom  matmul_q4_k_f32_f16acc_aligned_l_f16acc_probe.loom  matmul_q4_k_f32_f16acc_aligned_l_lds_f32_store_probe.loom  matmul_q4_k_f32_f16acc_aligned_l_lds_probe.loom  matmul_q4_k_f32_f16acc_aligned_l_probe.loom  mul_mat_f16_f32_batched.loom  mul_mat_f32_f32.loom  mul_mat_id_q4_k_f32.loom  mul_mat_id_q5_k_f32.loom  mul_mat_id_q6_k_f32.loom  mul_mat_q4_k_f32.loom  mul_mat_q4_k_packed_q8_1_x4_swiglu_f32.loom  mul_mat_q4_k_swiglu_f32.loom  mul_mat_q5_k_f32.loom  mul_mat_q6_k_f32.loom  mul_mat_q8_0_f32.loom  mul_mat_vec_f16_f32_f32_vk_clone.loom  mul_mat_vec_f16_f32_f32_vk_clone_k768.loom  mul_mat_vec_p021_f16_f32_vk_clone.loom  mul_mat_vec_q4_k_q8_1_f32_serial2.loom  mul_mat_vec_q5_k_q8_1_f32_vk_clone.loom  mul_mat_vec_q5_k_q8_1_f32_vk_clone_probe.loom  mul_mat_vec_q5_k_q8_1_f32_vk_clone_vcache.loom  mul_mat_vec_q6_k_f32_f32_down_k8192_r3072.loom  mul_mat_vec_q6_k_f32_f32_out_k3072_r200064_direct_scales.loom  (+15 more)
schemas/: kernel-spec.schema.json
specs/: mul_mat_q4_k_f32.json
tests/: test_route_schedules.py
(+56 files in other folders)
